<resources>
    <!-- General -->
    <string name="app_name">Target</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mixpanel_api_key">mixpanel_api_key</string>

    <!-- Error Messages -->
    <string name="generic_error">There was an unexpected error</string>
    <string name="error">ERROR</string>

    <!-- Sign Up -->
    <string name="first_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_hint">MIN. 8 CHARACTERS LONG</string>
    <string name="got_account">Already registered? Sign in!</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="other">OTHER</string>

    <!-- Sign In -->
    <string name="sign_in">Sign In</string>

    <!-- Profile -->
    <string name="welcome_message">Hi %1$s!</string>
    <string name="sign_out">Sign Out</string>
    <string name="default_error">Oops! Network error</string>
    <string name="text_title_target_mvd">TARGET MVD</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="text_forgot_your_password">Forgot your password?</string>
    <string name="text_connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="gender">Gender</string>
    <string name="select_your_gender">SELECT YOUR GENDER</string>
    <string name="error_input_no_name">you forgot to put your name!</string>
    <string name="error_invalid_email">oops! this email is not valid</string>
    <string name="error_password_length">the password must be 8 characters long</string>
    <string name="error_passwords_not_match">passwords don’t match</string>
    <string name="error_forgot_select_gender">You forgot to select your gender!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">this email and password don’t match</string>
    <string name="facebook_app_id">166925907359293</string>
    <string name="fb_login_protocol_scheme">fb166925907359293</string>
    <string name="title_activity_map">Map</string>
    <string name="target_points">Target Points</string>
    <string name="create_new_target">create new target</string>
    <string name="create_target_icon">create target icon</string>
    <string name="specify_area_length">Specify area length</string>
    <string name="target_title">target title</string>
    <string name="select_a_topic">select a topic</string>
    <string name="what_do_you_want_to_talk">What do you want to talk about?</string>
    <string name="choose_a_title_for_your_target">Choose a title for your target</string>
    <string name="save_target_btn">save target</string>
    <string name="m"> m</string>
    <string name="success_creating_target">Success creating target</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="failed_creating_target">Failed creating target</string>
    <string name="topic">Topic</string>
    <string name="area_length">Area length</string>
</resources>
