<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_target_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingHorizontal="@dimen/margin_normal_30"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/text_area_length"
        style="@style/TextCreateTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small_10"
        android:text="@string/specify_area_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/area_text_input_layout"
        style="@style/TextInputLayoutBlackOutlinedBoxCorners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/no_dimen"
        android:layout_marginTop="@dimen/margin_small_8"
        android:layout_marginEnd="@dimen/no_dimen"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_area_length">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/area_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/m"
            android:inputType="numberDecimal"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_target_title"
        style="@style/TextCreateTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small_10"
        android:text="@string/target_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_input_layout"
        style="@style/TextInputLayoutBlackOutlinedBoxCorners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/no_dimen"
        android:layout_marginTop="@dimen/margin_small_8"
        android:layout_marginEnd="@dimen/no_dimen"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_target_title">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/choose_a_title_for_your_target"
            android:inputType="text"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_select_topic"
        style="@style/TextCreateTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small_10"
        android:text="@string/select_a_topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/topic_text_input_layout"
        style="@style/TextInputLayoutBlackOutlinedBoxCorners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/no_dimen"
        android:layout_marginTop="@dimen/margin_small_8"
        android:layout_marginEnd="@dimen/no_dimen"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_select_topic">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/topic_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/what_do_you_want_to_talk"
            android:inputType="none"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        tools:visibility="gone"
        android:id="@+id/save_target_btn"
        style="@style/ButtonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginBottom="@dimen/margin_normal_16"
        android:text="@string/save_target_btn"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topic_text_input_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/small_buttons_container"
        app:layout_constraintTop_toBottomOf="@id/topic_text_input_layout">

        <Button
            android:id="@+id/save_target_small_btn"
            style="@style/ButtonSignIn"
            android:layout_width="@dimen/width_create_target_small_btn"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_margin_top"
            android:layout_marginBottom="@dimen/margin_normal_16"
            android:text="@string/save"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_gravity="end" />

        <Button
            android:id="@+id/delete_target_small_btn"
            style="@style/ButtonSignIn"
            android:backgroundTint="@color/darkRed"
            android:layout_width="@dimen/width_create_target_small_btn"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_margin_top"
            android:layout_marginBottom="@dimen/margin_normal_16"
            android:text="@string/delete"
            android:textAllCaps="true"
            android:layout_gravity="start"
            android:gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
