<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.main.MainActivity">

    <FrameLayout
        android:id="@+id/frame_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_main_header"
            android:layout_marginTop="@dimen/margin_negative_50"
            android:src="@drawable/bc_header_green_yellow" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextHeaderLoginTitle"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <TextView
        android:id="@+id/email_hint_text_view"
        style="@style/HintTextSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        style="@style/TextInputLayoutBlackOutlinedBoxCorners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_input_text_layout_login"
        android:layout_marginTop="@dimen/margin_small_8"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_hint_text_view">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_hint_text_view"
        style="@style/HintTextSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_20"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/TextInputLayoutBlackOutlinedBoxCorners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_input_text_layout_login"
        android:layout_marginTop="@dimen/margin_small_8"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_hint_text_view">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        style="@style/ButtonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />

    <TextView
        android:id="@+id/forgot_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small_8"
        android:text="@string/text_forgot_your_password"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <TextView
        android:id="@+id/connect_with_facebook_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal_20"
        android:text="@string/text_connect_with_facebook"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text_view" />

    <View
        android:id="@+id/view_separator"
        android:layout_width="@dimen/no_dimen"
        android:layout_height="@dimen/view_separator_height"
        android:layout_marginTop="@dimen/margin_xbig_60"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_text_view"
        app:layout_constraintStart_toStartOf="@+id/sign_up_text_view"
        app:layout_constraintTop_toBottomOf="@id/connect_with_facebook_text_view" />

    <TextView
        android:id="@+id/sign_up_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        style="@style/TextSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_separator" />

</androidx.constraintlayout.widget.ConstraintLayout>
